# GDASApp

./: .gitignore  .gitmodules  build.sh
.github/: pull_request_template.md
bundle/: CMakeLists.txt
ci/: ci_tests.sh  driver.sh  gw_driver.sh  hera.sh  hercules.sh  orion.sh  run_ci.sh  run_gw_ci.sh  stable_driver.sh
mains/: gdas.cc
modulefiles/EVA/: hera.lua
modulefiles/GDAS/: gaea.intel.lua  hera.intel.lua  wcoss2.intel.lua
parm/aero/: jcb-base.yaml.j2
parm/aero/berror/: aero_diagb.yaml.j2
parm/atm/: jcb-base.yaml.j2  jcb-prototype_3dvar-fv3inc.yaml.j2  jcb-prototype_3dvar.yaml.j2  jcb-prototype_lgetkf-fv3inc.yaml.j2  jcb-prototype_lgetkf.yaml.j2  jcb-prototype_lgetkf_observer.yaml.j2  jcb-prototype_lgetkf_solver.yaml.j2
parm/io/: fv3jedi_fieldmetadata_fv3inc.yaml  fv3jedi_fieldmetadata_history.yaml
parm/snow/: ens_apply_incr_nml.j2  jcb-base.yaml.j2  jcb-prototype_2dvar.yaml.j2
parm/snow/prep/: fims.nml.j2  prep_ims.yaml.j2
parm/soca/: fields_metadata.yaml  marine-jcb-3dfgat.yaml.j2  marine-jcb-base.yaml  soca_fix_stage_025.yaml.j2  soca_fix_stage_100.yaml.j2  soca_fix_stage_500.yaml.j2
parm/soca/berror/: soca_ensrecenter.yaml
parm/soca/fms/: input.nml.j2
parm/soca/letkf/: letkf.yaml.j2
parm/soca/obs/: obs_list.yaml
parm/soca/obs/config/: icec_amsu_mb_l2.yaml  icec_atms_n20_l2.yaml  icec_atms_n21_l2.yaml  icec_atms_npp_l2.yaml  icec_gmi_gpm_l2.yaml  icec_ssmis_f17_l2.yaml  icec_viirs_n20_l2_north.yaml  icec_viirs_n20_l2_south.yaml  insitu_profile_bathy.yaml  insitu_profile_dbuoy.yaml  insitu_profile_dbuoyb.yaml  insitu_profile_glider.yaml  insitu_profile_marinemammal.yaml  insitu_profile_mbuoy.yaml  insitu_profile_mbuoyb.yaml  insitu_profile_tesac.yaml  insitu_profile_tesac_salinity.yaml  insitu_profile_xbtctd.yaml  insitu_surface_altkob.yaml  insitu_surface_trkob.yaml  insitu_surface_trkob_salinity.yaml
parm/soca/obsprep/: obsprep_config.yaml
prototypes/: gen_prototype.sh
test/: CMakeLists.txt
test/atm/global-workflow/: CMakeLists.txt  config.yaml  jcb-prototype_3dvar-fv3inc.yaml.j2  jcb-prototype_3dvar.yaml.j2  jcb-prototype_lgetkf-fv3inc.yaml.j2  jcb-prototype_lgetkf.yaml.j2  jcb-prototype_lgetkf_observer.yaml.j2  jcb-prototype_lgetkf_solver.yaml.j2  jjob_ens_init_split.sh
test/fv3jedi/testinput/: gdasapp_fv3jedi_fv3inc.yaml
test/gw-ci/: CMakeLists.txt  create_exp.sh  run_exp.sh
test/gw-ci/atm/: jcb-prototype_3dvar-fv3inc_ufs_hybatmDA.yaml.j2  jcb-prototype_3dvar_ufs_hybatmDA.yaml.j2  jcb-prototype_lgetkf-fv3inc_ufs_hybatmDA.yaml.j2  jcb-prototype_lgetkf_observer_ufs_hybatmDA.yaml.j2  jcb-prototype_lgetkf_solver_ufs_hybatmDA.yaml.j2  jcb-prototype_lgetkf_ufs_hybatmDA.yaml.j2
test/gw-ci/soca/: jcb-prototype_3dfgat_3DVarAOWCDA.yaml.j2
test/marine/: CMakeLists.txt
test/testreference/: C48mx500_3DVarAOWCDA_3dfgat.ref  C96C48_ufs_hybatmDA_3dvar-fv3inc.ref  C96C48_ufs_hybatmDA_3dvar.ref  C96C48_ufs_hybatmDA_lgetkf-fv3inc.ref  C96C48_ufs_hybatmDA_lgetkf_observer.ref  C96C48_ufs_hybatmDA_lgetkf_solver.ref  atm_jjob_3dvar-fv3inc.ref  atm_jjob_3dvar.ref  atm_jjob_lgetkf-fv3inc.ref  atm_jjob_lgetkf.ref  atm_jjob_lgetkf_observer.ref  atm_jjob_lgetkf_solver.ref
ush/: detect_machine.sh  module-setup.sh
ush/eva/: marine_eva_post.py  marine_gdas_plots.yaml
ush/ioda/bufr2ioda/marine/b2i/: bufr2ioda_insitu_profile_glider.py
ush/ioda/bufr2ioda/marine/b2i/b2iconverter/: bufr2ioda_converter.py  ioda_variables.py  ocean.py
ush/soca/: marine_recenter.py  prep_ocean_obs.py  prep_ocean_obs_utils.py  soca_vrfy.py
utils/chem/: chem_diagb.h
utils/fv3jedi/: fv3jedi_fv3inc.h
utils/ioda_example/: gdas_meanioda.h
utils/land/: land_ensrecenter.h
utils/obsproc/: InsituAll2ioda.h  Rads2Ioda.h  util.h
utils/obsproc/applications/: gdas_obsprovider2ioda.h
utils/soca/: gdas_ens_handler.h  gdas_incr_handler.h  gdas_postprocincr.h  gdas_soca_diagb.h  gdas_socahybridweights.h  gdassoca_obsstats.h
utils/soca/fig_gallery/: README.md  exgdas_global_marine_analysis_vrfy_manual.py  gdassoca_obsstats.py  gdassoca_obsstats_template.html  run_marine_analysis_vrfy_manual.job  run_vrfy.py  vrfy_config.yaml  vrfy_jobcard.sh.j2  vrfy_script.py
utils/soca/fig_gallery/marine_vrfy_display/: README  default.css  index_vrfy_marine.html
utils/test/: CMakeLists.txt  prepdata.sh
utils/test/testdata/: insitu_profile_argo_1.cdl  insitu_profile_argo_2.cdl
utils/test/testinput/: gdas_insituall2ioda.yaml
utils/test/testref/: insituall2ioda.test
